--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jest": "^27.5.1"
   },
   "dependencies": {
+    "@babel/core": "^7.17.5",
     "@babel/preset-env": "^7.16.11",
     "babel-jest": "^27.5.1"
   }
